add select plugin and remove the old one

--- a/resources/assets/admin/scss/_variables.scss
+++ b/resources/assets/admin/scss/_variables.scss
@@ -424,7 +424,7 @@ $input-border-radius-sm: $border-radius-sm;
 
 $input-focus-bg: $input-bg;
 $input-focus-border-color: lighten($component-active-bg, 25%);
-$input-focus-color: $teal;
+$input-focus-color: $input-color;
 $input-focus-width: $input-btn-focus-width;
 $input-focus-box-shadow: $input-btn-focus-box-shadow;
 
