--- a/resources/assets/admin/scss/_init.scss
+++ b/resources/assets/admin/scss/_init.scss
@@ -10,6 +10,7 @@ $fa-font-path: "./webfonts";
 @import "~@fortawesome/fontawesome-free/scss/regular";
 
 @import "components/setup";
+@import "components/react-select";
 @import "components/helpers";
 @import "components/panel";
 @import "components/sidebar";
