--- a/public/_init.css
+++ b/public/_init.css
@@ -64,7 +64,7 @@
  */
 
 :root {
-  --blue: #007bff;
+  --blue: #354458;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
@@ -72,12 +72,12 @@
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --teal: #20c997;
+  --teal: #00D1B2;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #354458;
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -236,14 +236,14 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #00D1B2;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #05ffda;
   text-decoration: underline;
 }
 
@@ -2040,16 +2040,16 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b8daff;
+  background-color: #c6cbd0;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #9fcdff;
+  background-color: #b8bec4;
 }
 
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #9fcdff;
+  background-color: #b8bec4;
 }
 
 .table-secondary,
@@ -2308,10 +2308,10 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #80bdff;
+  border-color: #52ffe5;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2862,8 +2862,8 @@ textarea.form-control {
 .btn:focus,
 .btn.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .btn.disabled,
@@ -2882,42 +2882,42 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #354458;
+  border-color: #354458;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #0069d9;
-  border-color: #0062cc;
+  background-color: #273240;
+  border-color: #222b38;
 }
 
 .btn-primary:focus,
 .btn-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
 }
 
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #354458;
+  border-color: #354458;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0062cc;
-  border-color: #005cbf;
+  background-color: #222b38;
+  border-color: #1d2530;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus,
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
 }
 
 .btn-secondary {
@@ -3201,27 +3201,27 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #007bff;
+  color: #354458;
   background-color: transparent;
   background-image: none;
-  border-color: #007bff;
+  border-color: #354458;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #354458;
+  border-color: #354458;
 }
 
 .btn-outline-primary:focus,
 .btn-outline-primary.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
 }
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #007bff;
+  color: #354458;
   background-color: transparent;
 }
 
@@ -3229,15 +3229,15 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #354458;
+  border-color: #354458;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(53, 68, 88, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3522,12 +3522,12 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #00D1B2;
   background-color: transparent;
 }
 
 .btn-link:hover {
-  color: #0056b3;
+  color: #05ffda;
   text-decoration: underline;
   background-color: transparent;
   border-color: transparent;
@@ -3795,7 +3795,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .dropdown-item.disabled,
@@ -4176,17 +4176,17 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .custom-control-input:active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #b3d7ff;
+  background-color: #85ffed;
 }
 
 .custom-control-input:disabled ~ .custom-control-label {
@@ -4236,7 +4236,7 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
@@ -4244,7 +4244,7 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -4252,11 +4252,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 123, 255, 0.5);
+  background-color: rgba(53, 68, 88, 0.5);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(0, 123, 255, 0.5);
+  background-color: rgba(53, 68, 88, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -4264,7 +4264,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::before {
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .custom-radio .custom-control-input:checked ~ .custom-control-label::after {
@@ -4272,7 +4272,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 123, 255, 0.5);
+  background-color: rgba(53, 68, 88, 0.5);
 }
 
 .custom-select {
@@ -4293,10 +4293,10 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #80bdff;
+  border-color: #52ffe5;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(128, 189, 255, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(128, 189, 255, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(82, 255, 229, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(82, 255, 229, 0.5);
 }
 
 .custom-select:focus::-ms-value {
@@ -4352,13 +4352,13 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #80bdff;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  border-color: #52ffe5;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .custom-file-input:focus ~ .custom-file-label::after {
-  border-color: #80bdff;
+  border-color: #52ffe5;
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -4415,16 +4415,16 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  -webkit-box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4435,7 +4435,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #007bff;
+  background-color: #00D1B2;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4454,7 +4454,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #b3d7ff;
+  background-color: #85ffed;
 }
 
 .custom-range::-webkit-slider-runnable-track {
@@ -4470,7 +4470,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #007bff;
+  background-color: #00D1B2;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4489,7 +4489,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-moz-range-thumb:active {
-  background-color: #b3d7ff;
+  background-color: #85ffed;
 }
 
 .custom-range::-moz-range-track {
@@ -4508,7 +4508,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #007bff;
+  background-color: #00D1B2;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -4526,7 +4526,7 @@ input[type="button"].btn-block {
 }
 
 .custom-range::-ms-thumb:active {
-  background-color: #b3d7ff;
+  background-color: #85ffed;
 }
 
 .custom-range::-ms-track {
@@ -4638,7 +4638,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff;
+  background-color: #00D1B2;
 }
 
 .nav-fill .nav-item {
@@ -5494,14 +5494,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #00D1B2;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0056b3;
+  color: #05ffda;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -5510,8 +5510,8 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25);
 }
 
 .page-link:not(:disabled):not(.disabled) {
@@ -5532,8 +5532,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #00D1B2;
+  border-color: #00D1B2;
 }
 
 .page-item.disabled .page-link {
@@ -5605,14 +5605,14 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #007bff;
+  background-color: #354458;
 }
 
 .badge-primary[href]:hover,
 .badge-primary[href]:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #0062cc;
+  background-color: #222b38;
 }
 
 .badge-secondary {
@@ -5747,17 +5747,17 @@ input[type="button"].btn-block {
 }
 
 .alert-primary {
-  color: #004085;
-  background-color: #cce5ff;
-  border-color: #b8daff;
+  color: #1c232e;
+  background-color: #d7dade;
+  border-color: #c6cbd0;
 }
 
 .alert-primary hr {
-  border-top-color: #9fcdff;
+  border-top-color: #b8bec4;
 }
 
 .alert-primary .alert-link {
-  color: #002752;
+  color: #090b0e;
 }
 
 .alert-secondary {
@@ -5903,7 +5903,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #007bff;
+  background-color: #354458;
   -webkit-transition: width 0.6s ease;
   transition: width 0.6s ease;
 }
@@ -6005,8 +6005,8 @@ input[type="button"].btn-block {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #00D1B2;
+  border-color: #00D1B2;
 }
 
 .list-group-flush .list-group-item {
@@ -6024,20 +6024,20 @@ input[type="button"].btn-block {
 }
 
 .list-group-item-primary {
-  color: #004085;
-  background-color: #b8daff;
+  color: #1c232e;
+  background-color: #c6cbd0;
 }
 
 .list-group-item-primary.list-group-item-action:hover,
 .list-group-item-primary.list-group-item-action:focus {
-  color: #004085;
-  background-color: #9fcdff;
+  color: #1c232e;
+  background-color: #b8bec4;
 }
 
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #004085;
-  border-color: #004085;
+  background-color: #1c232e;
+  border-color: #1c232e;
 }
 
 .list-group-item-secondary {
@@ -6977,14 +6977,14 @@ button.close {
 }
 
 .bg-primary {
-  background-color: #007bff !important;
+  background-color: #354458 !important;
 }
 
 a.bg-primary:hover,
 a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0062cc !important;
+  background-color: #222b38 !important;
 }
 
 .bg-secondary {
@@ -7113,7 +7113,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #007bff !important;
+  border-color: #354458 !important;
 }
 
 .border-secondary {
@@ -10327,12 +10327,12 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #007bff !important;
+  color: #354458 !important;
 }
 
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #0062cc !important;
+  color: #222b38 !important;
 }
 
 .text-secondary {
@@ -15442,11 +15442,31 @@ ul {
 
 a {
   text-decoration: none !important;
-  color: #00D1B2;
 }
 
-a:hover {
-  color: #05ffda;
+.css-2o5izw {
+  border-color: rgba(0, 209, 178, 0.25) !important;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25) !important;
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25) !important;
+}
+
+.css-2o5izw:hover {
+  border-color: rgba(0, 209, 178, 0.25) !important;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25) !important;
+          box-shadow: 0 0 0 0.2rem rgba(0, 209, 178, 0.25) !important;
+}
+
+.css-wqgs6e {
+  background: #354458 !important;
+  color: #fff !important;
+}
+
+.css-z5z6cw {
+  background: rgba(53, 68, 88, 0.85) !important;
+}
+
+.css-1ep9fjw {
+  color: #354458 !important;
 }
 
 .list-fw {
@@ -15481,6 +15501,7 @@ a:hover {
 
 .panel__sidebar .sidebar li a {
   position: relative;
+  color: #fff;
 }
 
 .panel__sidebar .sidebar li a:hover:after {
@@ -15502,7 +15523,6 @@ a:hover {
   padding: 0.5rem 0 0.5rem 0.5rem;
   width: 100%;
   display: block;
-  color: #fff;
 }
 
 .panel__sidebar .sidebar > li a:hover {
@@ -15560,7 +15580,7 @@ a:hover {
 
 .panel__navbar {
   background: #354458;
-  color: #fff;
+  color: dep-color(#354458);
   height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
