--- a/resources/assets/admin/scss/_variables.scss
+++ b/resources/assets/admin/scss/_variables.scss
@@ -310,7 +310,7 @@ $hr-margin-y: $spacer;
 
 // Tables
 //
-// Customizes the `.table` component with basic values, each used across all table variations.
+// Customizes the `.tableNames` component with basic values, each used across all tableNames variations.
 
 $table-cell-padding: .75rem;
 $table-cell-padding-sm: .3rem;
